--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,2 +1,2 @@
-vhostRoute=/home/peter/Projects/ApacheVHostInject/vhosts
-hostRoute=/home/peter/Projects/ApacheVHostInject/host
+vhostRoute=/etc/httpd/conf/extra/httpd-vhosts.conf
+hostRoute=/etc/hosts
